# mshadow

./: .gitignore  CMakeLists.txt  README.md
cmake/: apply-style.cmake  check-style.cmake  cuda.cmake  mshadow.cmake
guide/: basic.cpp  basic_stream.cu  defop.cpp
guide/exp-template/: exp_lazy.cpp  exp_template.cpp  exp_template_op.cpp
guide/mshadow-ps/: dbstr.h  dist_async_sum-inl.h  dist_async_sum.cpp  local_sum-inl.h  local_sum.cpp  local_sum.cu
guide/neuralnet/: convnet.cu  nnet.cu  nnet_ps.cu  util.h
make/: mshadow.mk
mshadow/: base.h  dot_engine-inl.h  expr_engine-inl.h  expr_scalar-inl.h  expression.h  extension.h  half.h  half2.h  io.h  logging.h  packet-inl.h  random.h  stream_gpu-inl.h  tensor.h  tensor_container.h  tensor_cpu-inl.h  tensor_gpu-inl.h
mshadow-ps/: mshadow_ps.h  ps_dist-inl.h  ps_local-inl.h  ps_rabit-inl.h  thread.h  thread_util.h
mshadow/cuda/: reduce.cuh  tensor_gpu-inl.cuh
mshadow/extension/: broadcast.h  broadcast_with_axis.h  channel_pool.h  channel_unpool.h  choose.h  complex.h  concat.h  crop.h  fill.h  flip.h  implicit_gemm.h  mask.h  mirror.h  one_hot.h  pack_col2patch.h  pad.h  range.h  reduce_with_axis.h  reduceto1d.h  reshape.h  slice.h  slice_ex.h  spatial_pool.h  spatial_unpool.h  spatial_upsampling_nearest.h  swapaxis.h  take.h  take_grad.h  transpose.h  unpack_patch2col.h
mshadow/packet/: plain-inl.h  sse-inl.h
test/: guide_basic.cc  guide_basic_stream.cu  guide_defop.cc  main.cc  pairtest.cu  pool.cu  reshape.cu  test.cu  test.h  unpack.cu
